Fix height of image issue in image slider on IE

--- a/app/components/Gallery/Gallery.styl
+++ b/app/components/Gallery/Gallery.styl
@@ -41,7 +41,7 @@
 
 .image-gallery-image
     width: 100%;
-    height: 100%;
+    height: auto;
     position: relative;
     img
         width: 100%
@@ -94,8 +94,8 @@
     .image-gallery
         margin-top 10px
 
-    .image-gallery-slide 
+    .image-gallery-slide
         height 255px!important
-    
+
     .image-gallery .image-gallery-slides
         padding-bottom 0px
